# python-file-organizer

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  config.json  config.py  organizer.py  pyproject.toml  release.sh  requirements.txt  utils.py
.github/workflows/: build-and-release.yml  ci.yml  codeql.yml  security.yml
demo/: README.md  rules.json
demo/input/: meeting_notes.txt  presentation_sample.pptx
demo/organized/Code/: example_script.py
demo/organized/Spreadsheets/: sales_report.xlsx
docs/: upwork-gallery-copy.txt  upwork-work-sample.md
organizer/: cli.py  config.py  diagnostics.py  io.py  logger.py  main.py  rules_loader.py  utils.py  watcher.py
organizer/engine/: __init__.py  organizer.py  rules.py
organizer/plugins/: __init__.py
organizer/rules/: __init__.py  default_rules.json
scripts/: create_windows_demo.ps1
tests/: test_cli.py  test_config.py  test_diagnostics.py  test_dry_run_and_collision.py  test_ignore_and_recursive.py  test_io_safe_move.py  test_logger.py  test_organizer.py  test_rules_engine.py  test_utils.py  test_watcher_debounce.py
