[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "file-organizer"
version = "1.2.0"
description = "A CLI tool to organize files by type"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
file-organizer = "organizer.cli:main"

[tool.setuptools]
packages = ["organizer", "organizer.engine", "organizer.rules"]

[tool.setuptools.package-data]
organizer = ["rules/*.json"]